# pyCGNS

./: .gitattributes  .gitignore  .hgignore  .pylintrc  .travis.yml  MANIFEST.in  README.md  changes.txt  contributors.txt  errors.py  freeze.py  index.txt  license  license.txt  meson.build  meson_options.txt  pyCGNS.txt  pyCGNSconfig.py  pyCGNSconfig.py.in  pyCGNSconfig_user.py  pyproject.toml  readme  readme.txt  setup.py  setup_userConfig.py  setuputils.py  tox.ini  version.py
.github/: ISSUE_TEMPLATE.md
CGNS/: __config__.py.in  __init__.py  meson.build
CGNS/APP/: __init__.py  meson.build
CGNS/APP/examples/: 001Disk.hdf  T0.py  __init__.py  addNodes.py  getBCbyFamily.py  map_loadandsave.py  merge.py  mergeTrees.py  meson.build
CGNS/APP/examples/MAP/: dictionnary.py  links.py  load.py  nodepernode.py  readme.txt  save.py
CGNS/APP/examples/PAT/: utils.py
CGNS/APP/lib/: arrayutils.pyx  cg_com.py  hashutils.c  hashutils.h  hashutils.pxd  linkZoneGridConnectivities.py  mergeTrees.py  meson.build  queries.py  unstructured.py
CGNS/APP/misc/: checktypes.py  meson.build  valgrind.supp
CGNS/APP/test/: __init__.py  cgu.py
CGNS/APP/tools/: cg_checksum  cg_checksum.py  cg_diff  cg_diff.py  cg_dump  cg_dump.py  cg_gather  cg_gather.py  cg_grep  cg_grep.py  cg_iges  cg_iges.py  cg_link  cg_link.py  cg_list  cg_list.py  cg_look  cg_scan  cg_scan.py  cg_scatter  cg_scatter.py
CGNS/DAT/: cksum.py  exceptions.py  preparedQueries.py  utils.py
CGNS/DAT/db/: __init__.py  adfutils.py  connect.py  db01.py  db02.py  db03.py  db_owner.py  db_test.py  foreignKeys.py  overwriteSchema.py  parseCGNS.py
CGNS/DAT/demo/: addMeta.py  cg01.py  cg02.py  cgutils.py
CGNS/DAT/test/: __init__.py
CGNS/DAT/tools/: CGNS.DAT.create  daxQT
CGNS/MAP/: CHLone_config.h  CHLone_config.h.in  EmbeddedCHLone.pyx  EmbeddedCHLone.pyx.in  SIDStoPython.c  SIDStoPython.h  __init__.py  cgio.py  error.c  l3.c  l3.h  l3P.h  l3error.h  linksearch.c  meson.build  meson_options.txt  sha256.c  sha256.h
CGNS/MAP/test/: T0.py  __init__.py  cgu.py
CGNS/NAV/: CGNS.NAV  Q7VTKRenderWindowInteractor.py  QVTKRenderWindowInteractor.py  Res_rc.py  __init__.py  build.txt  config.py.in  design.txt  diff.pyx  mcontrol.pyx  mdifftreeview.pyx  merge.pyx  meson.build  meson_options.txt  mmergetreeview.pyx  moption.py  mparser.pyx  mpattern.pyx  mquery.pyx  mtable.pyx  mtree.pyx  pqueries.py  script.py  temputils.pyx  uqueries.py  wcontrol.py  wdiag.py  wdifftreeview.py  weditors.py  wfile.py  wfingerprint.py  wform.py  whelp.py  winfo.py  wlink.py  wmergetreeview.py  wmessages.py  woption.py  wpattern.py  wquery.py  (+5 more)
CGNS/NAV/G/: Q7AnimationWindow.html  Q7AnimationWindow.pyx  Q7ControlWindow.html  Q7ControlWindow.pyx  Q7DiagWindow.html  Q7DiagWindow.pyx  Q7DiffWindow.html  Q7DiffWindow.pyx  Q7FileWindow.html  Q7FileWindow.pyx  Q7FormWindow.html  Q7FormWindow.pyx  Q7HelpWindow.html  Q7HelpWindow.pyx  Q7InfoWindow.html  Q7InfoWindow.pyx  Q7LinkWindow.html  Q7LinkWindow.pyx  Q7LogWindow.html  Q7LogWindow.pyx  Q7MergeWindow.html  Q7MergeWindow.pyx  Q7MessageWindow.html  Q7MessageWindow.pyx  Q7OptionsWindow.html  Q7OptionsWindow.pyx  Q7PatternWindow.html  Q7PatternWindow.pyx  Q7QueryWindow.html  Q7QueryWindow.pyx  Q7SelectionWindow.html  Q7SelectionWindow.pyx  Q7ToolsWindow.html  Q7ToolsWindow.pyx  Q7TreeWindow.html  Q7TreeWindow.pyx  Q7VTKPlotWindow.pyx  Q7VTKWindow.html  Q7VTKWindow.pyx
CGNS/NAV/R/: Res.qrc
CGNS/NAV/T/: Q7AnimationWindow.ui  Q7ControlWindow.ui  Q7DiagWindow.ui  Q7DiffWindow.ui  Q7FileWindow.ui  Q7FormWindow.ui  Q7HelpWindow.ui  Q7LogWindow.ui  Q7MergeWindow.ui  Q7OptionsWindow.ui  Q7PatternWindow.ui  Q7QueryWindow.ui  Q7SelectionWindow.ui  Q7ToolsWindow.ui  Q7TreeWindow.ui  Q7VTKPlotWindow.ui  Q7VTKWindow.ui
CGNS/NAV/test/: __init__.py  cgu.py
CGNS/NAV/tools/: cg_look.py
CGNS/PAT/: __init__.py  cgnsclass.py  cgnserrors.py  cgnskeywords.py  cgnslib.py  cgnstypes.py  cgnsutils.py  meson.build
CGNS/PAT/SIDS/: AdditionalFamilyName_t.py  ArbitraryGridMotion_t.py  Area_t.py  AverageInterface_t.py  AxiSymmetry_t.py  BCDataSet_t.py  BCData_t.py  BCProperty_t.py  BC_t.py  BaseIterativeData_t.py  CGNSBase_t.py  ChemicalKineticModel_t.py  ConvergenceHistory_t.py  DataArray_t.py  DataClass_t.py  DataConversion_t.py  Descriptor_t.py  DimensionalExponents_t.py  DimensionalUnits_t.py  DiscreteData_t.py  EMConductivityModel_t.py  EMElectricFieldModel_t.py  EMMagneticFieldModel_t.py  Elements_t.py  FamilyBC_t.py  FamilyName_t.py  Family_t.py  FlowEquationSet_t.py  FlowSolution_t.py  GasModel_t.py  GeometryReference_t.py  GoverningEquations_t.py  Gravity_t.py  GridConnectivity1to1_t.py  GridConnectivityProperty_t.py  GridConnectivity_t.py  GridCoordinates_t.py  GridLocation_t.py  IntegralData_t.py  Ordinal_t.py  (+22 more)
CGNS/PAT/elsA/: CGNSBase_t.py  FlowSolutionEndOfRun.py  ReferenceState_t.py  SolverBC.py  SolverBC_injmfr1.py  SolverBC_injmfr1.py~  SolverCompute.py  SolverCompute_01.py  SolverParam_motion.py  __init__.py
CGNS/PAT/test/: __init__.py  cgu.py  disk.py
CGNS/VAL/: CGNS.VAL  CGNS_VAL.py  SIDS.py  __init__.py  meson.build  simplecheck.py
CGNS/VAL/grammars/: CGNS_VAL_USER_DEFAULT.py  CGNS_VAL_USER_SIDS.py  CGNS_VAL_USER_SIDS_.pyx  __init__.py  etablesids.pyx  meson.build  valutils.pyx
CGNS/VAL/parse/: __init__.py  checklinks.py  findgrammar.py  generic.py  meson.build  messages.py  utils.py
CGNS/VAL/suite/: README.txt  __init__.py  meson.build  run.py
CGNS/VAL/test/: __init__.py  cgu.py
CGNS/WRA/: __init__.py  api.py  mll.pyx  mll_utils.c  utilities.py  wrapper.py
CGNS/WRA/modmll/: cgnsstrings.h
CGNS/WRA/test/: ADFextensive.py  CGNSWRAtest.py  HDFextensive.py  MLLextensive.py  __init__.py  cgu.py  wra_001.py  wra_002.py  wra_003.py  wra_004.py  wra_005.py  wra_006.py  wra_007.py  wra_008.py  wra_009.py  wra_010.py  wra_011.py  wra_012.py  wra_013.py  wra_014.py  wra_015.py  wra_016.py  wra_017.py  wra_018.py  wra_019.py  wra_020.py  wra_021.py  wra_022.py  wra_023.py  wra_024.py  wra_025.py  wra_026.py  wra_027.py  wra_028.py  wra_029.py  wra_030.py  wra_031.py  wra_032.py  wra_033.py  wra_034.py  (+77 more)
(+1289 files in other folders)
