py.install_sources([
'__init__.py',
'AdditionalFamilyName_t.py',
'ArbitraryGridMotion_t.py',
'Area_t.py',
'AverageInterface_t.py',
'AxiSymmetry_t.py',
'BaseIterativeData_t.py',
'BCDataSet_t.py',
'BCData_t.py',
'BCProperty_t.py',
'BC_t.py',
'CGNSBase_t.py',
'ChemicalKineticModel_t.py',
'ConvergenceHistory_t.py',
'DataArray_t.py',
'DataClass_t.py',
'DataConversion_t.py',
'Descriptor_t.py',
'DimensionalExponents_t.py',
'DimensionalUnits_t.py',
'DiscreteData_t.py',
'Elements_t.py',
'EMConductivityModel_t.py',
'EMElectricFieldModel_t.py',
'EMMagneticFieldModel_t.py',
'FamilyBC_t.py',
'FamilyName_t.py',
'Family_t.py',
'FlowEquationSet_t.py',
'FlowSolution_t.py',
'GasModel_t.py',
'GeometryReference_t.py',
'GoverningEquations_t.py',
'Gravity_t.py',
'GridConnectivity1to1_t.py',
'GridConnectivityProperty_t.py',
'GridConnectivity_t.py',
'GridCoordinates_t.py',
'GridLocation_t.py',
'IntegralData_t.py',
'Ordinal_t.py',
'OversetHoles_t.py',
'PointList_t.py',
'PointRange_t.py',
'ReferenceState_t.py',
'RigidGridMotion_t.py',
'Rind_t.py',
'RotatingCoordinates_t.py',
'SimulationType_t.py',
'ThermalConductivityModel_t.py',
'ThermalRelaxationModel_t.py',
'TurbulenceClosure_t.py',
'TurbulenceModel_t.py',
'UserDefinedData_t.py',
'ViscosityModel_t.py',
'X_t.py',
'ZoneBC_t.py',
'ZoneGridConnectivity_t.py',
'ZoneIterativeData_t.py',
'ZoneSubRegion_t.py',
'Zone_t.py',
],
subdir: 'CGNS/PAT/SIDS'
)
