python_sources = [
'__init__.py',
'00tree.py',
'04dataclass.py',
'04indexarray.py',
'04indexrange.py',
'06base.py',
'06zone.py',
'07elements.py',
'07flowsolution.py',
'07grid.py',
'07zonesubregion.py',
'08gridconnectivity1to1.py',
'08gridconnectivity.py',
'09bcdataset.py',
'09bc.py',
'10equations.py',
'12family.py',
]

py.install_sources(
python_sources,
subdir: 'CGNS/VAL/suite/SIDS'
)
